# Deen-app

./: .gitignore  README.md  build.gradle.kts  gradlew  settings.gradle.kts
.agents/skills/build-and-test/: SKILL.md
agent-platform/: .env.example  .gitignore  README.md  docker-compose.yml
agent-platform/backend/: Dockerfile  pyproject.toml  requirements.txt
agent-platform/backend/app/: config.py  main.py
agent-platform/backend/app/agent/: orchestrator.py  planner.py  task_manager.py
agent-platform/backend/app/api/: routes.py  websocket.py
agent-platform/backend/app/browser/: actions.py  controller.py  dom_parser.py
agent-platform/backend/app/llm/: ollama_client.py  prompts.py
agent-platform/backend/app/streaming/: stream_manager.py
agent-platform/backend/app/vault/: credential_store.py
agent-platform/desktop/: Dockerfile  startup.sh  supervisord.conf
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
cloud-gallery/: .gitignore  Dockerfile  README.md
cloud-gallery/client/: .eslintrc.cjs  index.html  package-lock.json  package.json
cloud-gallery/client/src/: App.jsx  index.css  main.jsx
cloud-gallery/client/src/components/: FileCard.jsx  Layout.jsx  PreviewModal.jsx  UploadModal.jsx
cloud-gallery/client/src/context/: AuthContext.jsx  ThemeContext.jsx
cloud-gallery/client/src/pages/: ApiDocs.jsx  AuthCallback.jsx  Dashboard.jsx  Gallery.jsx  Landing.jsx  Login.jsx  Settings.jsx
cloud-gallery/server/: .env.example  package-lock.json  package.json
cloud-gallery/server/src/: index.js
(+62 files in other folders)
