[project]
name = "ai-agent-platform"
version = "0.1.0"
description = "Autonomous AI Agent Platform with browser control and cloud desktop"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=13.0",
    "playwright>=1.48.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "cryptography>=43.0.0",
    "aiosqlite>=0.20.0",
    "python-multipart>=0.0.12",
    "pillow>=10.4.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
